[gd_scene load_steps=3 format=3 uid="uid://cgv4kbrho80c8"]

[ext_resource type="Script" path="res://src/widgets/inventory.gd" id="1_e1tsy"]
[ext_resource type="PackedScene" uid="uid://bpmild4bh2ry1" path="res://src/widgets/item_slot.tscn" id="5_ovt45"]

[node name="inventory" type="MarginContainer"]
script = ExtResource("1_e1tsy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "背包"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_close" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="MarginContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
tab_count = 4
tab_0/title = "全部"
tab_1/title = "消耗品"
tab_2/title = "装备"
tab_3/title = "材料"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_right = 5

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="item_slot" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot2" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot3" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot4" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot5" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot6" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot7" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot8" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot9" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot10" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot11" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot12" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot13" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot14" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot15" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot16" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot17" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot18" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot19" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="item_slot20" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("5_ovt45")]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="btn_decompose" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "分解"

[node name="btn_pack" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "整理"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/btn_close" to="." method="_on_btn_close_pressed"]
[connection signal="tab_changed" from="MarginContainer/VBoxContainer/MarginContainer3/TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/btn_decompose" to="." method="_on_btn_decompose_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/btn_pack" to="." method="_on_btn_pack_pressed"]
